<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView app:cardBackgroundColor="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:text="@string/confirmation_dialog"
            android:textColor="@color/colorGray"
            android:textSize="22sp"
            android:padding="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_gravity="end"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:textColor="@color/colorGray"
                android:textSize="16sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm"
                android:text="@string/yes"
                android:textSize="16sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>