<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:minHeight="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@android:color/white"
            android:background="?android:selectableItemBackgroundBorderless"
            android:layout_centerVertical="true"
            android:layout_width="48dp"
            android:layout_height="48dp" />

        <TextView
            android:layout_toEndOf="@id/back"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        app:cardElevation="4dp"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/save"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:layout_marginBottom="16dp"
                    android:text="@string/create_a_note"
                    android:background="@android:color/white"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title"
                        android:inputType="textPersonName"
                        android:padding="16dp"
                        android:hint="@string/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:background="@color/colorGrayLight"
                        android:inputType="textPersonName"
                        android:hint="@string/description"
                        android:gravity="start"
                        android:minHeight="120dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/category"
                        android:background="@color/colorGrayLight"
                        android:focusableInTouchMode="false"
                        android:inputType="textPersonName"
                        android:hint="@string/category"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:drawableTint="@color/colorGray"
                        android:gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/priority"
                        android:background="@color/colorGrayLight"
                        android:focusableInTouchMode="false"
                        android:inputType="textPersonName"
                        android:hint="@string/priority"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:drawableTint="@color/colorGray"
                        android:gravity="start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>