<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_margin="16dp"
        android:clipToPadding="false"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorPrimary"
                android:text="@string/login"
                android:textSize="28sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:padding="16dp"
                android:text="@string/log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/loading"
                android:visibility="gone"
                android:layout_margin="12dp"
                android:layout_width="48dp"
                android:layout_height="48dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>